tests/netconvert/import/XML/errors/broken_edge/edge#priority__false4/errors.netconvert
Error: Attribute 'priority' in definition of edge '4' Invalid Number Format (long long integer format) a.
Quitting (on error).
